[BUGFIX] Wrong alignment of French labels for login screen
Since the username label changed from "Utilisateur" to "Nom d'utilisateur"
in French, the alignment of labels and text fields is broken.

Fixes: #30688
Releases: 4.5,4.6

--- a/typo3/sysext/t3skin/stylesheets/structure/login_screen.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/login_screen.css
@@ -90,7 +90,7 @@ body#typo3-index-php .t3-login-field .t3-login-alert-capslock {
 body#typo3-index-php .t3-login-field label {
 	float: left;
 	padding-right: 10px;
-	width: 90px;
+	width: 120px;
 }
 
 body#typo3-index-php .t3-login-field input {
@@ -130,7 +130,7 @@ body#typo3-index-php .t3-login-openid-disabled #t3-login-openIdLogo {
 }
 
 body#typo3-index-php .t3-login-submit {
-	margin: 15px 0 0 100px;
+	margin: 15px 0 0 130px;
 	padding: 3px 16px;
 }
 
